added dashboard and card updates

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -89,3 +89,81 @@ h5,
 h6 {
   font-family: "Nunito", sans-serif;
 }
+
+/* -- DASHBOARD STYLES */
+
+.dashboard .filter {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.dashboard .filter .icon {
+  color: #aab7cf;
+  padding-right: 20px;
+  padding-bottom: 5px;
+  transition: 0.3s;
+  font-size: 16px;
+  position: relative;
+}
+
+.dashboard .filter .icon:hover,
+.dashboard .filter .icon:focus {
+  color: #4154f1;
+  cursor: pointer;
+}
+
+.dashboard .filter .dropdown-header {
+  padding: 8px 15px;
+}
+
+.dashboard .filter .dropdown-header h6 {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #aab7cf;
+  margin-bottom: 0;
+  padding: 0;
+}
+
+.dashboard .filter .dropdown-item {
+  padding: 8px 15px;
+}
+
+/* -- CARD STYLES -- */
+.cardContainer {
+  padding-bottom: 10px;
+}
+
+.iconContainer {
+  font-size: 32px;
+  line-height: 0;
+  width: 64px;
+  height: 64px;
+  flex-shrink: 0;
+  flex-grow: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-card {
+  padding-bottom: 10px;
+  position: relative;
+}
+
+.info-card h6 {
+  font-size: 28px;
+  color: #012970;
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+}
+
+.dropdown-menu {
+  position: absolute;
+  right: 0;
+  z-index: 1000;
+  opacity: 90%;
+}
